--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ function myFunction() {
 </div>
 <div id="tintuc">
     <div class="newsmain">
-        <a href=""><img class="news2" src="newsmain.jpeg"></a>
+        <img class="news2" src="newsmain.jpeg">
         <a href="">Ngày 13/8, Hà Nội, TP HCM và 37 tỉnh thành khác thêm 9180 ca nhiễm mới</a><br/>
         <span style="font-size: 0.7em;color: gray;margin-left: 5%;">Thứ sáu, 13/08/2021, 18:53</span><br/>
         <p style="overflow:auto;color: gray;">&emsp;&emsp;Hệ thống Quốc gia quản lý ca bệnh COVID-19 trong 24 giờ qua ghi nhận 9.180 ca nhiễm mới tại 39 tỉnh, thành phố, trong đó có 1.999 ca trong cộng đồng.</p>
